# sparkmobility-testing

./: .gitignore  CLAUDE.md  LICENSE  README copy.md  README.md  autoformat.sh  environment.yml  example_usage.ipynb  gravity_usage.ipynb  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yaml
result/: config.json
sparkmobility/: __init__.py  datatset.py  settings.py  stays.py
sparkmobility/config/: load_config.py  spark_settings.ini
sparkmobility/models/: epr.py  gravity.py  gravity_level.py
sparkmobility/models/timegeo_organized/: MIGRATION_SUMMARY.md  README.md  __init__.py  config.py  data_processor.py  example_usage.py  module_2_3_1  test_package.py  workflow.py
sparkmobility/models/timegeo_organized/results_organized/Parameters/: NonComm_pt_daily.txt  NonComm_pt_daily_weekly.txt  NonComm_pt_weekly.txt  ParametersCommuters.txt  ParametersNonCommuters.txt
sparkmobility/models/timegeo_organized/results_organized/Parameters/Commuters/: DNSimuCommuters.txt  DTSimuCommuters.txt  ParametersCommuters.txt  SimuLocCommuters.txt
sparkmobility/models/timegeo_organized/results_organized/Parameters/NonCommuters/: DNRealNonCommuters.txt  DNSimuNonCommuters.txt  DTRealNonCommuters.txt  DTSimuNonCommuters.txt  ParametersNonCommuters.txt  RealLocNonCommuters.txt  SimuLocNonCommuters.txt
sparkmobility/models/timegeo_organized/results_organized/Simulation/: activeness.txt  otherlocation.txt  simulation_location.txt
sparkmobility/models/timegeo_organized/results_organized/Simulation/Compressed/: simulationResults_0.txt  simulationResults_1.txt  simulationResults_2.txt  simulationResults_3.txt  simulationResults_4.txt  simulationResults_5.txt  simulationResults_6.txt  simulationResults_7.txt
sparkmobility/models/timegeo_organized/results_organized/Simulation/Locations/: usersLocations_0.txt  usersLocations_1.txt  usersLocations_2.txt  usersLocations_3.txt  usersLocations_4.txt  usersLocations_5.txt  usersLocations_6.txt  usersLocations_7.txt
sparkmobility/models/timegeo_organized/results_organized/Simulation/Mapped/: simulationResults_0.txt  simulationResults_1.txt  simulationResults_2.txt  simulationResults_3.txt  simulationResults_4.txt  simulationResults_5.txt  simulationResults_6.txt  simulationResults_7.txt
sparkmobility/models/timegeo_organized/results_organized/Simulation/Parameters/: usersParameters_0.txt  usersParameters_1.txt  (+6 more)
sparkmobility/models/timegeo_organized/utils/: SRFiltered_to_SimInput.py  Simulation_Mapper.py  Simulation_Preparation.py  __init__.py  cpp_utils.py  file_utils.py  parquet_utils.py
sparkmobility/models/timegeo_parquet/: module_2_3_1  module_2_3_1.cpp  setup_revised.py  timegeo_workflow_parquet.py
sparkmobility/models/timegeo_parquet/src_parquet/: Aggregated_Plots.py  SRFiltered_to_SimInput.py  Simulation_Mapper.py  Simulation_PostProcessing.py  Simulation_Preparation.py  __init__.py
sparkmobility/processing/: home_and_work_detection.py  stay_detection.py  user_selection.py
sparkmobility/utils/: __init__.py  census.py  county_tesslation.py  session.py
sparkmobility/visualization/: individual.py  population.py
