[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "sparkmobility"
version = "0.1.0"
description = "Human mobility basic package"
readme = "README.md"
license = "MIT"

authors = [
  { name = "Shangqing Cao", email = "caoalbert@berkeley.edu" }
]

requires-python = ">=3.11"

dependencies = [
  "censusdis>=1.4.0",
  "matplotlib>=3.8.4",
  "tqdm>=4.66.4",
  "folium>=0.20.0",
  "tqdm>=4.67.1",
  "geopandas==1.0.1",
  "statsmodels>=0.14.4",
  "geopy>=2.4.1",
  "numpy>=1.26.4",
  "py4j>=0.10.9.7",
  "pyarrow>=14.0.2",
  "pyproj>=3.6.1",
  "setuptools>=69.5.1",
  "pyspark>=3.5.1",
  "appnope>=0.1.4",
  "asttokens>=3.0.0",
  "comm>=0.2.2",
  "debugpy>=1.8.11",
  "decorator>=5.1.1",
  "exceptiongroup>=1.2.2",
  "executing>=2.1.0",
  "importlib-metadata>=8.6.1",
  "ipykernel>=6.29.5",
  "ipython>=8.32.0",
  "jedi>=0.19.2",
  "jupyter_client>=8.6.3",
  "jupyter_core>=5.7.2",
  "matplotlib-inline>=0.1.7",
  "nest-asyncio>=1.6.0",
  "packaging>=24.2",
  "parso>=0.8.4",
  "pexpect>=4.9.0",
  "pickleshare>=0.7.5",
  "pip>=25.0",
  "platformdirs>=4.3.6",
  "prompt-toolkit>=3.0.50",
  "psutil>=5.9.0",
  "ptyprocess>=0.7.0",
  "pure_eval>=0.2.3",
  "pygments>=2.19.1",
  "python-dateutil>=2.9.0.post0",
  "pyzmq>=26.2.0",
  "six>=1.17.0",
  "stack_data>=0.6.3",
  "tornado>=6.4.2",
  "traitlets>=5.14.3",
  "typing_extensions>=4.12.2",
  "wcwidth>=0.2.13",
  "wheel>=0.45.1",
  "zipp>=3.21.0"
]
