[metadata]
name = timegeo
version = 0.1.0
description = Human mobility basic package
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = Shangqing Cao
author_email = caoalbert@berkeley.edu

[options]
python_requires = >=3.11
install_requires =
    numpy==1.26.4
    numpy-base==1.26.4
    py4j==0.10.9.7
    pyarrow==14.0.2
    pyproj==3.6.1
    setuptools==69.5.1
    pyspark==3.5.1

[build-system]
requires = setuptools, wheel
build-backend = setuptools.build_meta